--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,2 +1,4 @@
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2056826061150993"
+<head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2056826061150993"
      crossorigin="anonymous"></script>
+</head>
