--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -5,8 +5,7 @@
      style="display:block"
      data-ad-client="ca-pub-2056826061150993"
      data-ad-slot="8199498220"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-format="auto"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
